examples/type_system/failing/178_import_except_missing_open_bracket.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

import Foo.Bar except x, y ]
let after = 1
